--- a/performance_tests.ipynb
+++ b/performance_tests.ipynb
@@ -12,24 +12,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(array([-1,  1]), array([100522, 901479]))"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "rng = np.random.default_rng(0)\n",
-    "g = 2*rng.binomial(1, p=0.9, size=[1001]*2)-1\n",
-    "np.unique(g, return_counts=True)"
+    "i = Ising(lattice=Lattice(6,random_state=1))"
    ]
   },
   {
@@ -40,7 +27,12 @@
     {
      "data": {
       "text/plain": [
-       "Lattice(size=1, p=0.5, grid=array([[-1]]), random_state=None)"
+       "array([[ 1,  1, -1,  1, -1, -1],\n",
+       "       [ 1, -1,  1, -1,  1,  1],\n",
+       "       [-1,  1, -1, -1, -1, -1],\n",
+       "       [-1, -1,  1, -1, -1,  1],\n",
+       "       [ 1,  1,  1, -1, -1,  1],\n",
+       "       [ 1, -1,  1,  1,  1,  1]])"
       ]
      },
      "execution_count": 3,
@@ -49,62 +41,34 @@
     }
    ],
    "source": [
-    "Lattice(1)"
+    "i.lattice.grid"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Ising(lattice=Lattice(size=32, p=0.5, grid=array([[ 1, -1, -1, ...,  1,  1, -1],\n",
-       "       [-1,  1,  1, ..., -1, -1,  1],\n",
-       "       [-1,  1, -1, ...,  1,  1,  1],\n",
-       "       ...,\n",
-       "       [-1,  1, -1, ..., -1,  1,  1],\n",
-       "       [ 1,  1,  1, ...,  1,  1, -1],\n",
-       "       [ 1, -1,  1, ...,  1, -1,  1]]), random_state=0), temp=25500, inter=-23.1)"
+       "array([[ 1,  1, -1,  1, -1, -1],\n",
+       "       [ 1, -1,  1, -1,  1,  1],\n",
+       "       [-1,  1, -1,  1, -1, -1],\n",
+       "       [-1, -1,  1, -1, -1,  1],\n",
+       "       [ 1,  1,  1,  1, -1,  1],\n",
+       "       [ 1, -1,  1,  1,  1,  1]])"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "Ising(temp=25500,inter=-23.1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "l = Lattice(4)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([0, 0])"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np.mod((0,4),4)"
+    "list_of_spins = [(1,1), (2,3), (4,3)]\n",
+    "i.update_grid(list_of_spins)\n",
+    "i.lattice.grid"
    ]
   },
   {
@@ -115,10 +79,7 @@
     {
      "data": {
       "text/plain": [
-       "array([[-1,  1, -1,  9],\n",
-       "       [ 1,  1,  1, -1],\n",
-       "       [-1, -1, -1,  1],\n",
-       "       [-1, -1,  1, -1]])"
+       "3.0"
       ]
      },
      "execution_count": 11,
@@ -127,8 +88,174 @@
     }
    ],
    "source": [
-    "l.grid[0,3] = 9\n",
-    "l.grid"
+    "index_flip = 0.25*i.lattice.grid[1,1]*4 + 2\n",
+    "index_flip"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.381e-16"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "k = 1.381e-16 # eV/K\n",
+    "k"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "28396586730275.023"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "1/(i.temp*k)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.0"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.exp(-8/(i.temp*k))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(True, True, True, 8.74175144307033e-80, 7.641821829242221e-159)"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "i.flip"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(array([-8, -4,  0,  4,  8]), array([ 2, 14, 12,  6,  2]))\n",
+      "(array([-8, -4,  0,  4,  8]), array([ 1, 10, 10, 10,  5]))\n",
+      "(array([-8, -4,  0,  4,  8]), array([ 2, 14, 12,  6,  2]))\n",
+      "(array([-8, -4,  0,  4]), array([ 1,  9, 15, 11]))\n",
+      "(array([-8, -4,  0,  4,  8]), array([ 2, 15,  7,  9,  3]))\n",
+      "(array([-8, -4,  0,  4,  8]), array([ 1,  8, 13, 10,  4]))\n",
+      "(array([-8, -4,  0,  4,  8]), array([ 3, 10,  8, 14,  1]))\n",
+      "(array([-8, -4,  0,  4,  8]), array([ 1,  7, 16, 11,  1]))\n",
+      "(array([-8, -4,  0,  4,  8]), array([ 2, 16, 10,  4,  4]))\n",
+      "(array([-8, -4,  0,  4,  8]), array([ 2,  6, 13, 12,  3]))\n",
+      "(array([-8, -4,  0,  4,  8]), array([ 1,  5, 18,  9,  3]))\n",
+      "(array([-8, -4,  0,  4,  8]), array([ 1, 10, 14, 10,  1]))\n",
+      "(array([-8, -4,  0,  4]), array([ 4,  4, 20,  8]))\n",
+      "(array([-8, -4,  0,  4,  8]), array([ 1, 10, 14, 10,  1]))\n",
+      "(array([-8, -4,  0,  4,  8]), array([ 4,  8, 15,  6,  3]))\n"
+     ]
+    }
+   ],
+   "source": [
+    "for s in range(15):\n",
+    "    i = Ising(lattice=Lattice(6,random_state=s))\n",
+    "    des = []\n",
+    "    for r in range(i.lattice.size):\n",
+    "        for j in range(i.lattice.size):\n",
+    "            des.append(i.get_flip(i.lattice, i.temp, i.inter, r,j))\n",
+    "    \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array([-8, -4,  0,  4,  8]), array([ 1, 10, 10, 10,  5]))"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.unique(des, return_counts=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.5118216247002567"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rng = np.random.default_rng(1)\n",
+    "rng.random()"
    ]
   },
   {
